Fix url in repository address

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@me.github.com:Wannabook/wannabook-frontend.git"
+    "url": "git@github.com:Wannabook/wannabook-frontend.git"
   },
   "author": "Wannabook team",
   "license": "ISC",
