--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This is a repo for Wannabook frontend",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,18 +26,41 @@
     ]
   },
   "devDependencies": {
-    "eslint": "5.16.0",
-    "husky": "1.3.1",
-    "lint-staged": "8.1.5",
-    "eslint-config-wannabook": "1.0.8",
+    "@babel/core": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@babel/preset-react": "7.0.0",
+    "babel-cli": "6.26.0",
     "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-runtime": "6.26.0",
+    "clean-webpack-plugin": "2.0.1",
+    "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
+    "eslint-config-wannabook": "1.0.8",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.11.0",
-    "prettier": "1.16.4"
+    "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.5",
+    "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "4.11.0",
+    "prettier": "1.16.4",
+    "react-hot-loader": "4.8.3",
+    "sass-loader": "7.1.0",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.2.1",
+    "webpack-md5-hash": "0.0.6"
+  },
+  "dependencies": {
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-loadable": "5.5.0",
+    "react-router-dom": "5.0.0"
   }
 }
