--- a/package.json
+++ b/package.json
@@ -20,19 +20,23 @@
     }
   },
   "lint-staged": {
-    "*.{js,json,css,md}": [
-      "prettier --write",
+    "*.{js,jsx,json,css}": [
+      "prettier --write --config ./.prettierrc.js --config-precedence file-override",
       "git add"
     ]
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-json-strings": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
+    "@babel/preset-stage-3": "7.0.0",
     "babel-cli": "6.26.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-runtime": "6.26.0",
     "clean-webpack-plugin": "2.0.1",
     "eslint": "5.16.0",
