--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "8.0.5",
     "babel-runtime": "6.26.0",
     "clean-webpack-plugin": "2.0.1",
+    "css-loader": "2.1.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
@@ -56,6 +57,7 @@
     "prettier": "1.16.4",
     "react-hot-loader": "4.8.3",
     "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
