--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "node-sass": "4.11.0",
     "prettier": "1.16.4",
     "react-hot-loader": "4.8.3",
+    "redux": "4.0.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "webpack": "4.29.6",
@@ -67,6 +68,8 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-loadable": "5.5.0",
-    "react-router-dom": "5.0.0"
+    "react-redux": "7.0.1",
+    "react-router-dom": "5.0.0",
+    "redux-thunk": "2.3.0"
   }
 }
