--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
+    "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-loadable": "5.5.0",
