--- a/package.json
+++ b/package.json
@@ -75,6 +75,10 @@
     "react-redux": "7.0.1",
     "react-router-dom": "5.0.0",
     "redux-actions": "2.6.5",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "0.86.0",
+    "styled-components": "4.2.0",
+    "styled-normalize": "8.0.6"
   }
 }
