--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.11.0",
+    "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
@@ -62,6 +63,7 @@
     "redux": "4.0.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
