--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "This is a repo for Wannabook frontend",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development",
+    "build": "webpack --mode production --env.ENVIRONMENT=production",
+    "staging": "webpack --mode production --env.ENVIRONMENT=staging",
+    "dev": "webpack-dev-server --mode development --env.ENVIRONMENT=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -39,8 +40,10 @@
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-runtime": "6.26.0",
+    "browser-sync": "2.26.5",
     "clean-webpack-plugin": "2.0.1",
     "css-loader": "2.1.1",
+    "dotenv": "7.0.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
@@ -50,6 +53,8 @@
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.11.0",
+    "file-loader": "3.0.1",
+    "gulp": "4.0.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
@@ -60,6 +65,7 @@
     "redux": "4.0.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
@@ -72,6 +78,11 @@
     "react-loadable": "5.5.0",
     "react-redux": "7.0.1",
     "react-router-dom": "5.0.0",
-    "redux-thunk": "2.3.0"
+    "redux-actions": "2.6.5",
+    "redux-thunk": "2.3.0",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "0.86.0",
+    "styled-components": "4.2.0",
+    "styled-normalize": "8.0.6"
   }
 }
