--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --mode production --env.ENVIRONMENT=production",
     "staging": "webpack --mode production --env.ENVIRONMENT=staging",
     "dev": "webpack-dev-server --mode development --env.ENVIRONMENT=development",
+    "dev:mobile": "webpack-dev-server --mode development --env.MOBILE_TESTING=true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -41,6 +42,7 @@
     "babel-loader": "8.0.5",
     "babel-runtime": "6.26.0",
     "browser-sync": "2.26.5",
+    "browser-sync-webpack-plugin": "2.2.2",
     "clean-webpack-plugin": "2.0.1",
     "css-loader": "2.1.1",
     "dotenv": "7.0.0",
