--- a/package.json
+++ b/package.json
@@ -76,10 +76,12 @@
     "react-loadable": "5.5.0",
     "react-redux": "7.0.1",
     "react-router-dom": "5.0.0",
+    "react-slick": "0.24.0",
     "redux-actions": "2.6.5",
     "redux-thunk": "2.3.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.86.0",
+    "slick-carousel": "1.8.1",
     "styled-components": "4.2.0",
     "styled-normalize": "8.0.6"
   }
