--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "@babel/plugin-syntax-import-meta",
     ["@babel/plugin-proposal-class-properties", { "loose": false }],
     "@babel/plugin-proposal-json-strings",
-    "@babel/plugin-proposal-export-default-from"
+    "@babel/plugin-proposal-export-default-from",
+    ["@babel/plugin-transform-runtime", { "regenerator": true }]
   ]
 }
