--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/plugin-proposal-json-strings": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.5.0",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-stage-3": "7.0.0",
@@ -86,6 +87,7 @@
     "react-router-dom": "5.0.0",
     "react-slick": "0.24.0",
     "redux-actions": "2.6.5",
+    "redux-saga": "1.0.5",
     "redux-thunk": "2.3.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.86.0",
