--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run dev",
     "dev": "webpack-dev-server --mode development --env.ENVIRONMENT=development",
     "dev:mobile": "webpack-dev-server --mode development --env.MOBILE_TESTING=true --env.ENVIRONMENT=development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -63,6 +63,7 @@
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
+    "jest": "24.8.0",
     "lint-staged": "8.1.5",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.11.0",
