--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "prop-types": "15.7.2",
     "ramda": "0.26.1",
     "react": "16.8.6",
