--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "4.1.0",
-    "eslint-config-wannabook": "1.0.8",
+    "eslint-config-wannabook": "1.0.9",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.11.0",
+    "eslint-plugin-react-hooks": "2.1.2",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
