--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "redux-actions": "2.6.5",
     "redux-saga": "1.0.5",
     "redux-thunk": "2.3.0",
+    "reselect": "4.0.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.86.0",
     "slick-carousel": "1.8.1",
