WNB-137: Fetch and store user on load correctly

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 API_URL=
 API_VERSION=1
 
+# auth
+GOOGLE_AUTH_URL=users/login/google/auth
+
 # dev config values
 MOCK_CLIENT=false
 MOBILE_TESTING=false
