--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-json-strings": "7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "7.6.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-transform-runtime": "7.5.0",
@@ -77,6 +78,7 @@
   },
   "dependencies": {
     "axios": "0.19.0",
+    "history": "4.10.1",
     "prop-types": "15.7.2",
     "ramda": "0.26.1",
     "react": "16.8.6",
