--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-stage-3": "7.0.0",
+    "awesome-typescript-loader": "5.2.1",
     "babel-cli": "6.26.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
@@ -69,7 +70,9 @@
     "react-hot-loader": "4.8.3",
     "redux": "4.0.1",
     "sass-loader": "7.1.0",
+    "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
+    "typescript": "3.7.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
@@ -77,6 +80,14 @@
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.14",
+    "@types/ramda": "0.26.36",
+    "@types/react": "16.9.13",
+    "@types/react-dom": "16.9.4",
+    "@types/react-redux": "7.1.5",
+    "@types/react-router-dom": "5.1.3",
+    "@types/styled-components": "4.4.0",
     "axios": "0.19.0",
     "history": "4.10.1",
     "prop-types": "15.7.2",
@@ -88,7 +99,7 @@
     "react-router-dom": "5.0.0",
     "react-slick": "0.24.0",
     "redux-actions": "2.6.5",
-    "redux-saga": "1.0.5",
+    "redux-saga": "1.1.3",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
     "semantic-ui-css": "2.4.1",
