--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@types/react-router-dom": "5.1.3",
     "@types/redux-actions": "2.6.1",
     "@types/styled-components": "4.4.0",
+    "@typescript-eslint/eslint-plugin": "2.10.0",
+    "@typescript-eslint/parser": "2.10.0",
     "awesome-typescript-loader": "5.2.1",
     "babel-cli": "6.26.0",
     "babel-eslint": "10.0.1",
@@ -107,6 +109,7 @@
     "semantic-ui-react": "0.86.0",
     "slick-carousel": "1.8.1",
     "styled-components": "4.2.0",
-    "styled-normalize": "8.0.6"
+    "styled-normalize": "8.0.6",
+    "typesafe-actions": "4.4.2"
   }
 }
