--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "@types/webpack-env": "1.14.1",
     "@typescript-eslint/eslint-plugin": "2.10.0",
     "@typescript-eslint/parser": "2.10.0",
-    "awesome-typescript-loader": "5.2.1",
     "babel-cli": "6.26.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
@@ -84,6 +83,7 @@
     "sass-loader": "7.1.0",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
+    "ts-loader": "6.2.1",
     "typescript": "3.7.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
