--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "This is a repo for Wannabook frontend",
   "main": "index.js",
+  "browserslist": [
+    "defaults",
+    "not dead"
+  ],
   "scripts": {
     "build": "webpack --mode production --env.ENVIRONMENT=production",
     "staging": "webpack --mode production --env.ENVIRONMENT=staging",
@@ -66,6 +70,7 @@
     "eslint-config-prettier": "4.1.0",
     "eslint-config-wannabook": "2.0.1",
     "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-compat": "3.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-prettier": "3.1.1",
