--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-stage-3": "7.0.0",
+    "@babel/preset-typescript": "7.7.7",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/ramda": "0.26.36",
