--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,json,css}": [
+    "*.{js,jsx,ts,tsx,json,css}": [
       "prettier --write --config ./.prettierrc.js --config-precedence file-override",
       "git add"
     ]
