--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "not dead"
   ],
   "scripts": {
-    "build": "webpack --env.NODE_ENV=production --mode production",
-    "staging": "webpack --env.NODE_ENV=staging --mode production",
+    "build:production": "webpack --env.NODE_ENV=production --mode production",
+    "build": "npm run build:production",
+    "profile": "webpack --env.NODE_ENV=production --env.PROFILING=true --mode production --profile --json > stats.json",
+    "build:staging": "webpack --env.NODE_ENV=staging --mode production",
     "start": "npm run dev",
     "dev": "webpack-dev-server --env.NODE_ENV=development --mode development",
     "test": "jest --watch"
@@ -94,6 +96,7 @@
     "typescript": "3.7.2",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "3.6.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
     "webpack-md5-hash": "0.0.6"
